--- a/styles/style.css
+++ b/styles/style.css
@@ -1254,7 +1254,7 @@ section {
         .sixth-block {
             background-image: url("../images/image-block-6.png");
             background-repeat: no-repeat;
-            background-position: 0% 75%;
+            background-position: 0 75%;
         }
 
         .sixth__block-content__item {
@@ -1473,8 +1473,8 @@ section {
     }
 
     .about-slider {
-        padding-right: 50px;
-        padding-left: 50px;
+        padding-right: 30px;
+        padding-left: 30px;
     }
 
     .about-text {
@@ -1491,8 +1491,8 @@ section {
     }
 
     .image-slider > img {
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
     }
 
     .about-title, .about-description {
@@ -1602,7 +1602,7 @@ section {
     }
 
     .card {
-        width: 400px;
+        width: 300px;
         height: 200px;
         font-family: OpenSans, sans-serif;
         background-color: #1A1917;
@@ -1672,4 +1672,86 @@ section {
         background-color: #000000;
     }
 }
+
+/*.image-slider {
+    width: auto;
+    height: 100%;
+    padding-right: 120px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+
+.about-text {
+    width: 50%;
+    padding-left: 120px;
+    padding-right: 50px;
+}
+
+.image-slider > img {
+    width: auto;
+    height: 100%;
+}
+
+.about-title, .about-description {
+    width: 100%;
+}
+
+.about-title {
+    font-size: 24px;
+    border-bottom: 2px solid #FFFFFF;
+    text-transform: uppercase;
+}
+
+.description-text {
+    font-family: OpenSans, sans-serif;
+    font-size: 20px;
+    padding-top: 20px;
+}
+
+.image-slider:not(.active) {
+    display: none;
+}
+
+.about-slider {
+    height: 80%;
+    background-size: cover;
+    background-position: center;
+}
+
+#slider {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.arrows {
+    width: 100%;
+    display: flex;
+}
+
+#right {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    height: 100px;
+    opacity: 0.7;
+    font-size: 30px;
+    color: #FFFFFF;
+}
+
+#left {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 100px;
+    opacity: 0.7;
+    font-size: 30px;
+    color: #FFFFFF;
+}
+
+#left:hover, #right:hover {
+    cursor: pointer;
+    color: #FFB548;
+}*/
 
